load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fdb-stacktester_lib",
    srcs = [
        "directory_ops.go",
        "machine.go",
        "main.go",
        "operations.go",
    ],
    importpath = "fdb.dev/cmd/fdb-stacktester",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/fdbgo/client",
        "//pkg/fdbgo/fdb",
        "//pkg/fdbgo/fdb/directory",
        "//pkg/fdbgo/fdb/subspace",
        "//pkg/fdbgo/fdb/tuple",
        "//pkg/fdbgo/wire",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
    ],
)

go_binary(
    name = "fdb-stacktester",
    embed = [":fdb-stacktester_lib"],
    visibility = ["//visibility:public"],
)
