load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fdb-wire-codegen_lib",
    srcs = ["main.go"],
    importpath = "github.com/birdayz/fdb-record-layer-go/cmd/fdb-wire-codegen",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "fdb-wire-codegen",
    embed = [":fdb-wire-codegen_lib"],
    visibility = ["//visibility:public"],
)
