load("@rules_go//go:def.bzl", "go_binary", "go_library")
load(":generate.bzl", "generate_wire_schema")

# Go parser — reads FDB headers, outputs schema/ + generated_messages.cpp.
go_binary(
    name = "schema-generator",
    embed = [":fdb-wire-schema-generator_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "fdb-wire-schema-generator_lib",
    srcs = [
        "fdb_stubs.h",
        "parser.go",
    ],
    importpath = "github.com/birdayz/fdb-record-layer-go/cmd/fdb-wire-schema-generator",
    visibility = ["//visibility:private"],
    deps = ["//pkg/fdbgo/wire"],
)

# Step 1: Parse FDB headers → schema/*.json + generated_messages.cpp
generate_wire_schema(
    name = "gen_schema",
    fdb_srcs = "@foundationdb//:all_srcs",
    schema_generator = ":schema-generator",
    visibility = ["//visibility:public"],
)

# Step 2: Test vectors are generated via docker_build.sh (not Bazel).
# Run: just wire-schema
# The Docker build uses the real FDB build image + ObjectWriter for ground truth.
