load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fdb-wirelog-dump_lib",
    srcs = ["main.go"],
    importpath = "fdb.dev/cmd/fdb-wirelog-dump",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "fdb-wirelog-dump",
    embed = [":fdb-wirelog-dump_lib"],
    visibility = ["//visibility:public"],
)
