load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "frl_lib",
    srcs = ["main.go"],
    importpath = "fdb.dev/cmd/frl",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/frl/internal/cmd",
        "@land_charm_fang_v2//:fang",
    ],
)

go_binary(
    name = "frl",
    embed = [":frl_lib"],
    visibility = ["//visibility:public"],
)
