load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test-report_lib",
    srcs = ["main.go"],
    importpath = "github.com/birdayz/fdb-record-layer-go/cmd/test-report",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "test-report",
    embed = [":test-report_lib"],
    visibility = ["//visibility:public"],
)
