load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "helpers",
    srcs = [
        "composite_index_conformance_store.go",
        "conformance_store.go",
        "container.go",
        "count_index_conformance_store.go",
        "count_not_null_index_conformance_store.go",
        "count_updates_index_conformance_store.go",
        "customer_conformance_store.go",
        "fanout_index_conformance_store.go",
        "index_conformance_store.go",
        "index_state_conformance_store.go",
        "javainvoker.go",
        "min_max_ever_index_conformance_store.go",
        "rebuild_index_conformance_store.go",
        "split_conformance_store.go",
        "store_header_conformance_store.go",
        "sum_index_conformance_store.go",
        "testdata.go",
    ],
    importpath = "github.com/birdayz/fdb-record-layer-go/conformance/helpers",
    visibility = ["//visibility:public"],
    deps = [
        "//gen",
        "//pkg/recordlayer",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@rules_go//go/runfiles",
    ],
)
