load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "demo_proto",
    srcs = ["src/main/proto/record_layer_demo.proto"],
    strip_import_prefix = "/conformance/java/src/main/proto",
    deps = ["//proto/apple:apple_proto"],
)

java_proto_library(
    name = "demo_java_proto",
    deps = [":demo_proto"],
)

java_library(
    name = "conformance_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        ":demo_java_proto",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:org_foundationdb_fdb_extensions",
        "@maven//:org_foundationdb_fdb_java",
        "@maven//:org_foundationdb_fdb_record_layer_core",
    ],
)

java_binary(
    name = "conformance_server",
    main_class = "com.birdayz.conformance.ConformanceServer",
    visibility = ["//visibility:public"],
    runtime_deps = [":conformance_lib"],
)
