load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "docscheck",
    srcs = ["doc.go"],
    importpath = "github.com/birdayz/fdb-record-layer-go/pkg/docscheck",
    visibility = ["//visibility:public"],
)

go_test(
    name = "docscheck_test",
    srcs = [
        "docs_consistency_test.go",
        "panic_boundary_test.go",
    ],
    # keep: living docs + archived snapshots staged into runfiles so the guard can read
    # them under Bazel (the same files `go test` reads from the repo tree). RFC-131.
    data = [
        "//:CHANGELOG.md",
        "//:DIVERGENCES.md",
        "//:MODULE.bazel",
        "//:PRODUCTION_READINESS.md",
        "//:README.md",
        "//:RELEASE.md",
        "//:TODO.md",
        "//:go.mod",
        "//docs/archive/reports-2026-03-09:snapshots",
        "//reports",
        # keep: RFC-134 panic-boundary doc-sync + fuzz-net guards staged into runfiles.
        "//docs:panic-audit.md",
        "//pkg/fdbgo/fdb/tuple:tuple_malformed_test.go",
        "//pkg/fdbgo/wire:reader_fuzz_test.go",
        "//pkg/relational/core/parser:fuzz_test.go",
        "//pkg/relational/core/query:cascades_translator_test.go",
    ],
    embed = [":docscheck"],
    deps = ["//pkg/linters/norecover"],
)
