load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "recordlayer",
    srcs = [
        "constants.go",
        "cursor.go",
        "database.go",
        "endpoint_type.go",
        "existence_check.go",
        "index.go",
        "index_maintainer.go",
        "index_scan.go",
        "index_state.go",
        "index_validation.go",
        "key_expression.go",
        "key_value_cursor.go",
        "metadata.go",
        "record_count.go",
        "record_version.go",
        "runner.go",
        "scan_properties.go",
        "split_helper.go",
        "store.go",
    ],
    importpath = "github.com/birdayz/fdb-record-layer-go/pkg/recordlayer",
    visibility = ["//visibility:public"],
    deps = [
        "//gen",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "recordlayer_test",
    timeout = "long",
    srcs = [
        "collision_test.go",
        "commit_hooks_test.go",
        "context_test.go",
        "continuation_test.go",
        "cursor_combinator_test.go",
        "cursor_functions_test.go",
        "cursor_seq_test.go",
        "existence_test.go",
        "index_scan_test.go",
        "index_state_test.go",
        "index_test.go",
        "index_validation_test.go",
        "key_structure_test.go",
        "large_scan_test.go",
        "metadata_builder_test.go",
        "metadata_test.go",
        "million_record_test.go",
        "multi_type_index_test.go",
        "multi_type_test.go",
        "record_count_test.go",
        "record_version_test.go",
        "recordlayer_suite_test.go",
        "reverse_scan_test.go",
        "runner_test.go",
        "save_error_test.go",
        "scan_test.go",
        "sparse_index_test.go",
        "split_record_test.go",
        "store_builder_test.go",
        "store_delete_test.go",
        "store_generic_test.go",
        "store_state_test.go",
        "store_test.go",
        "store_version_test.go",
        "typed_api_test.go",
        "typed_store_conformance_test.go",
        "version_range_test.go",
    ],
    embed = [":recordlayer"],
    deps = [
        "//gen",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_google_protobuf//proto",
    ],
)

# Million record tests are excluded from //... — too slow for normal CI.
# Run explicitly: bazelisk test //pkg/recordlayer:million_record_test
go_test(
    name = "million_record_test",
    timeout = "eternal",
    srcs = ["million_record_test.go"],
    embed = [":recordlayer"],
    tags = ["manual"],
    deps = [
        "//gen",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//proto",
    ],
)
