load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "recordlayer",
    srcs = [
        "aggregate_function.go",
        "atomic_index_helpers.go",
        "chained_cursor.go",
        "constants.go",
        "count_index_maintainer.go",
        "count_not_null_index_maintainer.go",
        "count_updates_index_maintainer.go",
        "cursor.go",
        "database.go",
        "dedup_cursor.go",
        "endpoint_type.go",
        "existence_check.go",
        "fallback_cursor.go",
        "index.go",
        "index_maintainer.go",
        "index_scan.go",
        "index_state.go",
        "index_validation.go",
        "indexing_range_set.go",
        "key_expression.go",
        "key_expression_proto.go",
        "key_value_cursor.go",
        "merge_cursor.go",
        "metadata.go",
        "metadata_evolution_validator.go",
        "metadata_proto.go",
        "min_max_ever_tuple_index_maintainer.go",
        "min_max_index_maintainer.go",
        "online_indexer.go",
        "range_set.go",
        "rank_index_maintainer.go",
        "ranked_set.go",
        "record_count.go",
        "record_function.go",
        "record_version.go",
        "runner.go",
        "scan_properties.go",
        "split_helper.go",
        "store.go",
        "store_builder.go",
        "store_delete_where.go",
        "store_typed.go",
        "store_version.go",
        "sum_index_maintainer.go",
        "version_index_maintainer.go",
    ],
    importpath = "github.com/birdayz/fdb-record-layer-go/pkg/recordlayer",
    visibility = ["//visibility:public"],
    deps = [
        "//gen",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

go_test(
    name = "recordlayer_test",
    timeout = "long",
    srcs = [
        "aggregate_function_test.go",
        "chained_cursor_test.go",
        "collision_test.go",
        "commit_hooks_test.go",
        "context_test.go",
        "continuation_test.go",
        "count_index_test.go",
        "count_not_null_index_test.go",
        "count_updates_index_test.go",
        "cross_type_index_test.go",
        "cursor_bug_verify_test.go",
        "cursor_combinator_test.go",
        "cursor_functions_test.go",
        "cursor_seq_test.go",
        "dedup_cursor_test.go",
        "error_path_test.go",
        "existence_test.go",
        "fallback_cursor_test.go",
        "index_bug_verify_test.go",
        "index_scan_test.go",
        "index_state_test.go",
        "index_test.go",
        "index_validation_test.go",
        "indexing_range_set_test.go",
        "key_expr_bug_verify_test.go",
        "key_expression_proto_test.go",
        "key_structure_test.go",
        "large_scan_test.go",
        "merge_cursor_test.go",
        "metadata_bug_verify_test.go",
        "metadata_builder_test.go",
        "metadata_evolution_validator_test.go",
        "metadata_proto_test.go",
        "metadata_test.go",
        "million_record_test.go",
        "min_max_ever_tuple_index_test.go",
        "min_max_index_test.go",
        "multi_type_index_test.go",
        "multi_type_test.go",
        "online_indexer_bug_verify_test.go",
        "online_indexer_test.go",
        "pk_dedup_test.go",
        "range_set_test.go",
        "rank_index_test.go",
        "rebuild_index_test.go",
        "record_count_test.go",
        "record_version_test.go",
        "recordlayer_suite_test.go",
        "reverse_scan_test.go",
        "runner_test.go",
        "save_error_test.go",
        "scan_limit_test.go",
        "scan_test.go",
        "sparse_index_test.go",
        "split_record_test.go",
        "stale_metadata_test.go",
        "store_bug_verify_test.go",
        "store_builder_test.go",
        "store_delete_test.go",
        "store_delete_where_test.go",
        "store_generic_test.go",
        "store_state_test.go",
        "store_test.go",
        "store_version_test.go",
        "sum_index_test.go",
        "typed_api_test.go",
        "typed_store_conformance_test.go",
        "unique_index_concurrent_test.go",
        "version_bug_verify_test.go",
        "version_index_test.go",
        "version_range_test.go",
    ],
    embed = [":recordlayer"],
    deps = [
        "//gen",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_google_protobuf//proto",
    ],
)

# Million record tests are excluded from //... — too slow for normal CI.
# Run explicitly: bazelisk test //pkg/recordlayer:million_record_test
go_test(
    name = "million_record_test",
    timeout = "eternal",
    srcs = ["million_record_test.go"],
    embed = [":recordlayer"],
    tags = ["manual"],
    deps = [
        "//gen",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//proto",
    ],
)
