load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "recordlayer",
    srcs = [
        "aggregate_function.go",
        "atomic_index_helpers.go",
        "atomic_mutation.go",
        "atomic_mutation_index_maintainer.go",
        "bitmap_value_index_maintainer.go",
        "bunched_map.go",
        "bunched_map_iterator.go",
        "chained_cursor.go",
        "collate_function_key_expression.go",
        "constants.go",
        "count_index_maintainer.go",
        "cursor.go",
        "cursor_combinators.go",
        "cursor_util.go",
        "database.go",
        "dedup_cursor.go",
        "dimensions_key_expression.go",
        "endpoint_type.go",
        "errors.go",
        "existence_check.go",
        "fallback_cursor.go",
        "fht_kac_rotator.go",
        "hnsw.go",
        "hnsw_distance_bytes.go",
        "hnsw_stats.go",
        "hnsw_vector.go",
        "index.go",
        "index_maintainer.go",
        "index_predicate.go",
        "index_scan.go",
        "index_state.go",
        "index_validation.go",
        "indexing_heartbeat.go",
        "indexing_mutual.go",
        "indexing_range_set.go",
        "indexing_throttle.go",
        "key_expression.go",
        "key_expression_compiled.go",
        "key_expression_proto.go",
        "key_expression_validate.go",
        "key_value_cursor.go",
        "list_key_expression.go",
        "long_arithmetic_function.go",
        "max_ever_version_index_maintainer.go",
        "merge_cursor.go",
        "metadata.go",
        "metadata_evolution_validator.go",
        "metadata_export.go",
        "metadata_proto.go",
        "metadata_store.go",
        "multidimensional_index_maintainer.go",
        "online_indexer.go",
        "order_function_key_expression.go",
        "permuted_min_max_index_maintainer.go",
        "range_set.go",
        "rank_index_maintainer.go",
        "ranked_set.go",
        "record_count.go",
        "record_function.go",
        "record_key_cursor.go",
        "record_version.go",
        "rtree.go",
        "rtree_hilbert.go",
        "rtree_storage.go",
        "rtree_types.go",
        "runner.go",
        "scan_properties.go",
        "spfresh_build.go",
        "spfresh_cache.go",
        "spfresh_codec.go",
        "spfresh_config.go",
        "spfresh_csplit.go",
        "spfresh_index_maintainer.go",
        "spfresh_kmeans.go",
        "spfresh_layout.go",
        "spfresh_merge.go",
        "spfresh_npa.go",
        "spfresh_query.go",
        "spfresh_rebalancer.go",
        "spfresh_split.go",
        "spfresh_storage.go",
        "spfresh_util.go",
        "spfresh_write.go",
        "split_helper.go",
        "split_key_expression.go",
        "store.go",
        "store_api.go",
        "store_batch.go",
        "store_builder.go",
        "store_delete_where.go",
        "store_function.go",
        "store_state_cache.go",
        "store_timer.go",
        "store_typed.go",
        "store_version.go",
        "text_cursor.go",
        "text_index_maintainer.go",
        "text_index_serializer.go",
        "text_tokenizer.go",
        "time_window_leaderboard.go",
        "time_window_leaderboard_maintainer.go",
        "tuple_fast.go",
        "tuple_ordering.go",
        "vec_math.go",
        "vector_index_maintainer.go",
        "version_index_maintainer.go",
    ],
    importpath = "github.com/birdayz/fdb-record-layer-go/pkg/recordlayer",
    visibility = ["//visibility:public"],
    deps = [
        "//gen",
        "//pkg/fdbgo/fdb",
        "//pkg/fdbgo/fdb/subspace",
        "//pkg/fdbgo/fdb/tuple",
        "//pkg/rabitq",
        "//pkg/recordlayer/vectorcodec",
        "@com_github_google_uuid//:uuid",
        "@com_github_rivo_uniseg//:uniseg",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/dynamicpb",
        "@org_golang_x_text//collate",
        "@org_golang_x_text//language",
        "@org_golang_x_text//unicode/norm",
    ],
)

go_test(
    name = "recordlayer_test",
    timeout = "long",
    srcs = [
        "aggregate_function_test.go",
        "aggregate_function_unit_test.go",
        "api_coverage2_test.go",
        "api_coverage_test.go",
        "benchmark_test.go",
        "bitmap_value_index_test.go",
        "bug_bounty2_test.go",
        "bug_bounty3_cursor_test.go",
        "bug_bounty3_index_test.go",
        "bug_bounty3_indexer_test.go",
        "bug_bounty3_metadata_test.go",
        "bug_bounty3_store_test.go",
        "bug_bounty3_test.go",
        "bug_bounty_test.go",
        "bunched_map_unit_test.go",
        "byte_limit_bug_test.go",
        "chained_cursor_test.go",
        "collate_function_key_expression_test.go",
        "collision_test.go",
        "commit_hooks_test.go",
        "compare_field_test.go",
        "conformance_audit_test.go",
        "context_api_test.go",
        "context_test.go",
        "continuation_stability_test.go",
        "continuation_test.go",
        "count_index_test.go",
        "count_not_null_index_test.go",
        "count_updates_index_test.go",
        "coverage_unit_test.go",
        "cross_type_index_test.go",
        "cursor_bug_verify_test.go",
        "cursor_combinator_edge_test.go",
        "cursor_combinator_test.go",
        "cursor_combinators_test.go",
        "cursor_context_test.go",
        "cursor_functions_test.go",
        "cursor_iterator_error_test.go",
        "cursor_seq_test.go",
        "cursor_test.go",
        "cursor_util_test.go",
        "database_runctx_test.go",
        "database_test.go",
        "dedup_cursor_test.go",
        "edge_case_test.go",
        "error_path_test.go",
        "errors_test.go",
        "existence_test.go",
        "fallback_cursor_test.go",
        "fht_kac_rotator_test.go",
        "field_type_index_test.go",
        "function_key_expression_test.go",
        "fuzz_test.go",
        "helpers_coverage_test.go",
        "hnsw_distance_bytes_test.go",
        "hnsw_iterator_error_test.go",
        "hnsw_stats_test.go",
        "index_bug_verify_test.go",
        "index_edge_cases_test.go",
        "index_maintainer_test.go",
        "index_predicate_test.go",
        "index_registration_matrix_test.go",
        "index_scan_test.go",
        "index_scan_unit_test.go",
        "index_state_test.go",
        "index_test.go",
        "index_validation_test.go",
        "indexing_heartbeat_test.go",
        "indexing_range_set_test.go",
        "indexing_throttle_test.go",
        "intersection_resume_test.go",
        "key_expr_bug_verify_test.go",
        "key_expression_compiled_test.go",
        "key_expression_concatenate_test.go",
        "key_expression_proto_test.go",
        "key_expression_test.go",
        "key_expression_validate_test.go",
        "key_structure_test.go",
        "key_value_cursor_test.go",
        "key_value_cursor_unit_test.go",
        "large_scan_test.go",
        "list_key_expression_test.go",
        "long_arithmetic_function_test.go",
        "max_ever_version_index_test.go",
        "merge_cursor_test.go",
        "metadata_bug_verify_test.go",
        "metadata_builder_test.go",
        "metadata_coverage_test.go",
        "metadata_evolution_validator_test.go",
        "metadata_proto_test.go",
        "metadata_store_test.go",
        "metadata_test.go",
        "metadata_validation_test.go",
        "metadata_validator_additions_test.go",
        "million_record_test.go",
        "min_max_ever_tuple_index_test.go",
        "min_max_index_test.go",
        "multi_type_index_test.go",
        "multi_type_test.go",
        "multidimensional_index_test.go",
        "online_indexer_bug_verify_test.go",
        "online_indexer_idempotent_test.go",
        "online_indexer_test.go",
        "order_predicate_integration_test.go",
        "permuted_min_max_index_test.go",
        "pk_dedup_test.go",
        "rabitq_test.go",
        "range_set_test.go",
        "rank_index_test.go",
        "ranked_set_test.go",
        "rebuild_index_test.go",
        "record_count_test.go",
        "record_version_test.go",
        "record_version_unit_test.go",
        "recordlayer_suite_test.go",
        "reverse_scan_test.go",
        "rtree_hilbert_test.go",
        "runner_test.go",
        "save_error_test.go",
        "scan_limit_test.go",
        "scan_properties_test.go",
        "scan_test.go",
        "schema_migration_test.go",
        "sparse_index_test.go",
        "spfresh_build_query_test.go",
        "spfresh_cache_test.go",
        "spfresh_codec_test.go",
        "spfresh_kmeans_test.go",
        "spfresh_layout_test.go",
        "spfresh_maintainer_test.go",
        "spfresh_merge_test.go",
        "spfresh_npa_test.go",
        "spfresh_rebalancer_test.go",
        "spfresh_split_test.go",
        "spfresh_storage_test.go",
        "spfresh_stress_test.go",
        "split_helper_test.go",
        "split_key_expression_test.go",
        "split_record_test.go",
        "stale_metadata_test.go",
        "store_api_test.go",
        "store_bug_verify_test.go",
        "store_builder_test.go",
        "store_delete_test.go",
        "store_delete_where_test.go",
        "store_function_test.go",
        "store_generic_test.go",
        "store_open_retryable_error_test.go",
        "store_state_cache_test.go",
        "store_state_test.go",
        "store_stress_test.go",
        "store_test.go",
        "store_timer_test.go",
        "store_version_test.go",
        "sum_index_test.go",
        "tenant_isolation_test.go",
        "text_index_test.go",
        "text_index_unit_test.go",
        "text_tokenizer_test.go",
        "time_window_leaderboard_test.go",
        "time_window_leaderboard_unit_test.go",
        "tuple_fast_test.go",
        "tuple_ordering_test.go",
        "typed_api_test.go",
        "typed_store_conformance_test.go",
        "unique_index_concurrent_test.go",
        "vec_math_test.go",
        "vector_index_test.go",
        "vector_index_tuple_test.go",
        "version_bug_verify_test.go",
        "version_index_test.go",
        "version_range_test.go",
    ],
    data = glob(
        ["testdata/**"],
        allow_empty = True,
    ),
    embed = [":recordlayer"],
    deps = [
        "//gen",
        "//pkg/fdbgo/fdb",
        "//pkg/fdbgo/fdb/subspace",
        "//pkg/fdbgo/fdb/tuple",
        "//pkg/rabitq",
        "//pkg/recordlayer/vectorcodec",
        "//pkg/testcontainers/foundationdb",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_ginkgo_v2//types",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

# Million record tests are excluded from //... — too slow for normal CI.
# Run explicitly: bazelisk test //pkg/recordlayer:million_record_test
go_test(
    name = "million_record_test",
    timeout = "eternal",
    srcs = ["million_record_test.go"],
    embed = [":recordlayer"],
    tags = ["manual"],
    deps = [
        "//gen",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//proto",
    ],
)

# Vector/SIFT benchmarks moved to pkg/recordlayer/bench/ (separate package).
# Run:
#   bazelisk test //pkg/recordlayer/bench:bench_test --test_arg="-test.bench=." --test_output=streamed
#   bazelisk test //pkg/recordlayer/bench:bench_test --test_arg="-test.run=TestSIFTBenchmark" --test_output=streamed --test_env=SIFT_BENCH=1
