load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "bindingtester_test",
    srcs = ["binding_test.go"],
    deps = [
        "//pkg/testcontainers/foundationdb",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
    ],
)
