load("@rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "bindingtester_test",
    srcs = ["binding_test.go"],
    data = [
        "Dockerfile",
        "//cmd/fdb-stacktester",
        "@foundationdb//:bindingtester",
        "@foundationdb//:python_fdb",
    ],
    embed = [":bindingtester"],
    tags = ["manual"],  # Don't run in just test — needs Docker image build, slow
    deps = [
        "//pkg/testcontainers/foundationdb",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
    ],
)

go_library(
    name = "bindingtester",
    srcs = ["doc.go"],
    importpath = "fdb.dev/cmd/fdb-stacktester/bindingtester",
    visibility = ["//visibility:public"],
)
